add photo gallery

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ html {
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 400;
-  font-size: .9rem;
+  font-size: 0.9rem;
   line-height: 1rem;
   text-align: center; }
 
@@ -133,7 +133,7 @@ header .banner img {
   text-align: right;
   cursor: pointer; }
   .menuIcon i {
-    padding: .5rem;
+    padding: 0.5rem;
     font-size: 1.5rem; }
 
 .bigScreen {
@@ -148,7 +148,7 @@ header .banner img {
   color: #404d0b; }
 
 .menuList li {
-  padding: .5rem;
+  padding: 0.5rem;
   transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1); }
 
 .menuList li:hover {
@@ -196,7 +196,7 @@ div.slider {
 
 /*LOGO*/
 .slider::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -214,11 +214,11 @@ main {
   line-height: 1.5rem; }
 
 .gioiThieu .content {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   height: auto;
   text-align: left; }
 .gioiThieu .content {
-  padding: .7rem;
+  padding: 0.7rem;
   border: 0.1rem solid white;
   border-radius: 15px; }
 .gioiThieu .wrapper {
@@ -228,22 +228,21 @@ main {
   border: 1px solid white;
   box-shadow: 3px 3px 3px gray; }
 .gioiThieu .forWhom .wrapper {
-  background-image: url("../images/slideshow/glarus_s.jpg"); }
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../images/dailyImgs/dailyImgs4.jpg"); }
 .gioiThieu .montessori .wrapper {
-  background-image: url("../images/slideshow/beautifulLanscape.jpg"); }
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../images/slideshow/beautifulLanscape.jpg"); }
 .gioiThieu .curriculum .wrapper {
-  background-image: url("../images/slideshow/nature-wallpapers-8.jpg"); }
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../images/slideshow/nature-wallpapers-8.jpg"); }
 .gioiThieu .wrapper div {
   width: 80%;
   margin: 1rem auto;
-  background-color: rgba(255, 255, 255, 0.7);
-  padding: .5rem; }
+  padding: 0.5rem; }
 
 .follows {
-  margin: 1rem 0 .5rem 0; }
+  margin: 1rem 0 0.5rem 0; }
 
 .follows figure img {
-  margin: .5rem;
+  margin: 0.5rem;
   width: 15%; }
 
 /*--------FOR WHOM -------------------*/
@@ -265,11 +264,11 @@ main {
     border-bottom: dotted #f8a01a 2px; }
 
 .montessori .content p {
-  margin: .5rem auto; }
+  margin: 0.5rem auto; }
 
 .montessori .content figure {
   width: 80%;
-  margin: .5rem auto; }
+  margin: 0.5rem auto; }
 
 .montessori .content figure img {
   width: 100%; }
@@ -281,7 +280,7 @@ main {
 
 .chuongTrinhHoc figure {
   width: 90%;
-  margin: .5rem auto; }
+  margin: 0.5rem auto; }
 
 .chuongTrinhHoc figure img {
   width: 100%; }
@@ -299,10 +298,10 @@ footer {
   footer figure img {
     width: 100%; }
   footer ul {
-    margin: .5rem 2%; }
+    margin: 0.5rem 2%; }
   footer ul li {
     list-style: none;
-    font-size: .8rem;
+    font-size: 0.8rem;
     color: #404d0b; }
   footer ul li a:not(:first-child) {
     text-decoration: none;
@@ -313,15 +312,61 @@ footer {
   footer ul li i {
     margin: 2%;
     font-size: 1rem;
-    transition: .2s;
+    transition: 0.2s;
     color: #404d0b; }
   footer ul li:first-child i {
     animation: changeColor 2s infinite; }
   footer p {
-    font-size: .5rem;
+    font-size: 0.5rem;
     margin-right: 2%;
     text-align: right;
     color: gray; }
+
+.thuVienHinh {
+  margin-top: 5rem; }
+  .thuVienHinh .album-container {
+    margin: 2rem auto 0.8rem auto; }
+  .thuVienHinh .photo-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); }
+  .thuVienHinh .photo-wrapper li {
+    list-style: none;
+    height: 100px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    border: 1px solid black; }
+
+.modalBox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 50; }
+
+.modalBox .closeBtn {
+  float: right;
+  color: white;
+  margin: 1rem;
+  font-size: 2rem;
+  cursor: pointer; }
+
+.modalBox-content {
+  width: 80%;
+  clear: both;
+  height: 90vh;
+  margin: 2rem auto;
+  overflow-y: auto; }
+
+.modalBox-content img {
+  width: 100%;
+  display: block;
+  border: solid white 2px;
+  border-radius: 15px; }
 
 @media only screen and (min-width: 35rem) {
   /*--------------------logo---------------------*/
@@ -352,9 +397,10 @@ footer {
     width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     margin: 0 auto; }
     .gioiThieu .content .wrapper div {
-      height: 308px; }
+      min-height: 308px; }
 
   .follows figure img {
     margin: 1rem;
@@ -367,14 +413,20 @@ footer {
       display: grid;
       grid-template-columns: 1fr 2fr;
       align-items: center;
-      grid-column-gap: .5rem; }
+      grid-column-gap: 0.5rem; }
     .forWhom-info figure img {
       width: 100%; }
 
   /*------------FOOTER----------*/
   footer ul li {
     list-style: none;
-    font-size: .9rem; } }
+    font-size: 0.9rem; }
+
+  /*-----------THU VIEN HINH -------------*/
+  .thuVienHinh .photo-wrapper {
+    grid-template-columns: repeat(4, 1fr); }
+  .thuVienHinh .photo-wrapper li {
+    height: 150px; } }
 /*end media query*/
 @media only screen and (min-width: 60rem) {
   /*================ HEADER ================*/
@@ -395,7 +447,7 @@ footer {
       text-decoration: none;
       color: #404d0b; }
     .bigScreen ul li {
-      padding: .7rem .5rem;
+      padding: 0.7rem 0.5rem;
       cursor: pointer;
       align-items: center; }
     .bigScreen ul li:hover {
@@ -424,13 +476,19 @@ footer {
   footer ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin: .5rem 0;
+    margin: 0.5rem 0;
     width: 100%;
     text-align: center; }
   footer ul li {
-    font-size: .9rem; }
+    font-size: 0.9rem; }
   footer ul li i {
     font-size: 1.1rem; }
   footer p {
-    font-size: .7rem; } }
+    font-size: 0.7rem; }
+
+  /*---------------THU VIEN HINH---------------*/
+  .thuVienHinh .photo-wrapper {
+    grid-template-columns: repeat(6, 1fr); }
+  .thuVienHinh .photo-wrapper li {
+    height: 170px; } }
 /*end media query*/
